--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8">
-    <title>Safs - HTML</title>
+    <title>Karen Flores Chura</title>
 
     <!-- ====== Google Fonts ====== -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
@@ -22,7 +22,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar-nav">
-    
+
      <!-- Preloader -->
     <div class="preloader">
         <div class="spinner">
@@ -31,7 +31,7 @@
         </div>
     </div>
     <!-- // Preloader -->
-    
+
 
     <!-- ====== Header ====== -->
     <header id="header" class="header">
@@ -71,7 +71,7 @@
             <div class="hero-content h-100">
                 <div class="d-table">
                     <div class="d-table-cell">
-                        <h2 class="text-uppercase">Let's Begin</h2>
+                        <h2 class="text-uppercase">Karen Flores Chura</h2>
                         <h3 class="text-uppercase"><span class="typed"></span></h3>
                         <p>Make designed by as Begindot.</p>
                         <a href="#about" class="button smooth-scroll">Learn More</a>
@@ -104,7 +104,7 @@
                 <!-- single featured item -->
                 <div class="col-lg-4 col-md-6">
                     <div class="single-featured-item-wrap">
-                        <h3><a href="#">Graphic Design</a></h3>
+                        <h3><a href="#">INGENIERÍA INDUSTRIAL</a></h3>
                         <div class="single-featured-item">
                             <div class="featured-icon">
                                 <i class="fa fa-edit"></i>
@@ -117,7 +117,7 @@
                 <!-- single featured item -->
                 <div class="col-lg-4 col-md-6">
                     <div class="single-featured-item-wrap">
-                        <h3><a href="#">Web Design</a></h3>
+                        <h3><a href="#">ESTUDIANTE DE:</a></h3>
                         <div class="single-featured-item">
                             <div class="featured-icon">
                                 <i class="fa fa-code"></i>
@@ -225,7 +225,7 @@
 
     <!-- ====== Fact Counter Section ====== -->
     <!-- ====================================================================
-            NOTE: You need to change  'data-count="10"' and 'p' Eliments 
+            NOTE: You need to change  'data-count="10"' and 'p' Eliments
         ===================================================================== -->
     <section class="section-padding pb-70 bg-img fact-counter" id="counter" style="background-image: url(assets/images/fan-fact-bg.jpg)">
         <div class="container">
