--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <div class="d-table">
                     <div class="d-table-cell">
                         <h2 class="text-uppercase">Karen Flores Chura</h2>
-                        <h3 class="text-uppercase"><span class="typed"></span></h3>
-                        <p>Make designed by as Begindot.</p>
-                        <a href="#about" class="button smooth-scroll">Learn More</a>
+                        <h3 class="text-uppercase">ESTUDIANTE DE:<span class="typed">INGENIERIA INDUSTRIAL</span></h3>
+                        <p>Universidad Continental.</p>
+                        <a href="#about" class="button smooth-scroll">MÁS ACERCA DE MI</a>
                     </div>
                 </div>
             </div>
