--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="d-table">
                     <div class="d-table-cell">
                         <h2 class="text-uppercase">Karen Flores Chura</h2>
-                        <h3 class="text-uppercase">ESTUDIANTE DE:<span class="typed">INGENIERIA INDUSTRIAL</span></h3>
+                        <h3 class="text-uppercase">ESTUDIANTE DE:INGENIERÍA INDUSTRIAL<span class="typed">AAAAA</span></h3>
                         <p>Universidad Continental.</p>
                         <a href="#about" class="button smooth-scroll">MÁS ACERCA DE MI</a>
                     </div>
